--- a/src/assets/styles/colors.scss
+++ b/src/assets/styles/colors.scss
@@ -1,4 +1,4 @@
-$primary-blue-color: #023765;
+$primary-blue-color: #0168c1;
 
 $text-color: #444444;
 $grey-color: #777777;
